--- a/src/app/bill-of-lading/bill-of-lading.component.html
+++ b/src/app/bill-of-lading/bill-of-lading.component.html
@@ -2,73 +2,58 @@
 
 <form [formGroup]="formGroup">
 
-<mat-form-field appearance="fill" class="initial-table">
-  <mat-label>Consignee</mat-label>
-  <input matInput [formControl]="cosigneeControl">
-</mat-form-field>
+  <topcrop-shipping-table [formGroup]="formGroup" (shippingUpdated)="updateShipping($event)"></topcrop-shipping-table>
 
-<mat-form-field appearance="fill" class="initial-table">
-  <mat-label>Shipper</mat-label>
-  <input matInput [formControl]="shipperControl">
-</mat-form-field>
+  <div></div>
 
-<mat-form-field appearance="fill" class="initial-table">
-  <mat-label>3rd Party Billing Info</mat-label>
-  <input matInput [formControl]="billingInfoControl">
-</mat-form-field>
+  <mat-form-field appearance="fill" class="routing">
+    <mat-label>Special Carrier Routing</mat-label>
+    <input matInput formControlName="specialCarrierRouting" autocomplete="doNotAutoComplete">
+  </mat-form-field>
 
+  <mat-form-field appearance="fill" class="routing">
+    <mat-label>P.O. Number:</mat-label>
+    <input matInput formControlName="poNumberRouting" autocomplete="doNotAutoComplete">
+  </mat-form-field>
 
-<div></div>
+  <div></div>
 
+  <mat-form-field appearance="fill" class="large-table">
+    <mat-label>Shipping Units</mat-label>
+    <input matInput formControlName="shippingUnits" autocomplete="doNotAutoComplete">
+  </mat-form-field>
 
-<mat-form-field appearance="fill" class="routing">
-  <mat-label>Special Carrier Routing</mat-label>
-  <input matInput [formControl]="specialCarrierRoutingControl">
-</mat-form-field>
+  <mat-checkbox formControlName="hazardousMaterial">Haz Material?</mat-checkbox>
 
-<mat-form-field appearance="fill" class="routing">
-  <mat-label>P.O. Number:</mat-label>
-  <input matInput [formControl]="poNumberRoutingControl">
-</mat-form-field>
+  <mat-form-field appearance="fill" class="large-table">
+    <mat-label>Description</mat-label>
+    <textarea matInput formControlName="description"></textarea>
+  </mat-form-field>
 
-<div></div>
+  <mat-form-field appearance="fill" class="large-table">
+    <mat-label>NMFC Item No.</mat-label>
+    <input matInput formControlName="nmfcNumber" autocomplete="doNotAutoComplete">
+  </mat-form-field>
 
-<mat-form-field appearance="fill" class="large-table">
-  <mat-label>Shipping Units</mat-label>
-  <input matInput [formControl]="shippingUnitsControl">
-</mat-form-field>
+  <mat-form-field appearance="fill" class="large-table">
+    <mat-label>Weight (in Lbs)</mat-label>
+    <input matInput formControlName="weight" autocomplete="doNotAutoComplete">
+  </mat-form-field>
 
-<mat-checkbox [formControl]="hazardousMaterialControl">Haz Material?</mat-checkbox>
+  <mat-form-field appearance="fill" class="large-table">
+    <mat-label>Class</mat-label>
+    <input matInput formControlName="class" autocomplete="doNotAutoComplete">
+  </mat-form-field>
 
-<mat-form-field appearance="fill" class="large-table">
-  <mat-label>Description</mat-label>
-  <textarea matInput [formControl]="descriptionControl"></textarea>
-</mat-form-field>
+  <mat-form-field appearance="fill" class="large-table">
+    <mat-label>FedEx Acct #</mat-label>
+    <input matInput formControlName="fedexAccountNumber" autocomplete="doNotAutoComplete">
+  </mat-form-field>
 
-<mat-form-field appearance="fill" class="large-table">
-  <mat-label>NMFC Item No.</mat-label>
-  <input matInput [formControl]="nmfcNumberControl">
-</mat-form-field>
-
-<mat-form-field appearance="fill" class="large-table">
-  <mat-label>Weight (in Lbs)</mat-label>
-  <input matInput [formControl]="weightControl">
-</mat-form-field>
-
-<mat-form-field appearance="fill" class="large-table">
-  <mat-label>Class</mat-label>
-  <input matInput [formControl]="classControl">
-</mat-form-field>
-
-<mat-form-field appearance="fill" class="large-table">
-  <mat-label>FedEx Acct #</mat-label>
-  <input matInput [formControl]="fedexAccountNumberControl">
-</mat-form-field>
-
-<mat-form-field appearance="fill" class="large-table">
-  <mat-label>Quote #</mat-label>
-  <input matInput [formControl]="quoteNumberControl">
-</mat-form-field>
+  <mat-form-field appearance="fill" class="large-table">
+    <mat-label>Quote #</mat-label>
+    <input matInput formControlName="quoteNumber" autocomplete="doNotAutoComplete">
+  </mat-form-field>
 
 
 </form>
